# LiDAR_Camera_Calibration

./: .gitignore  README.md  dep.repos
.devcontainer/: Dockerfile  devcontainer.json  rosPkgs.list
lidar_camera_calibration/: CMakeLists.txt  package.xml
lidar_camera_calibration/config/: calibration.yaml  realsense.yaml  usb_cam_params.yaml  zhangs.yaml
lidar_camera_calibration/data/: correspondences.txt  dist_coeffs.txt  intrinsics.txt  output.txt  zhangs_intrinsics.txt
lidar_camera_calibration/include/: nanoflann.hpp
lidar_camera_calibration/include/calc_tools/common/: cloud_covariance_estimation.hpp  concurrent_queue.hpp  console_colors.hpp  estimate_fov.hpp  frame.hpp  frame_cpu.hpp  frame_traits.hpp  ivox.hpp  kdtree2.hpp  nearest_neighbor_search.hpp  point_cloud_densificaton.hpp  raw_points.hpp  ros_cloud_converter.hpp  time_keeper.hpp  vector3i_hash.hpp  visual_lidar_data.hpp
lidar_camera_calibration/include/calc_tools/preprocess/: generate_lidar_image.hpp  pcl_densifier.hpp  point_cloud_integrator.hpp  preprocess.hpp  static_point_cloud_integrator.hpp
lidar_camera_calibration/include/camera/: equirectangular.hpp  pinhole.hpp
lidar_camera_calibration/include/dfo/: directional_direct_search.hpp
lidar_camera_calibration/include/pcl_ops/: pcl_integration_factor.hpp  pcl_integration_factor_gen.hpp  pcl_integration_factor_gen_impl.hpp  pcl_integration_factor_impl.hpp
lidar_camera_calibration/launch/: calibration.launch.py  rosbag_recorder.launch.py  velodyne_hw_if.launch.py
lidar_camera_calibration/lidar_camera_calibration/: find_matches_superglue.py
lidar_camera_calibration/rviz/: robot_hw.rviz  robot_sw.rviz
lidar_camera_calibration/src/: calibration.cpp  find_correspondences.cpp  preprocess_ros2.cpp  sync_sensors.cpp  zhangs.cpp
lidar_camera_calibration/src/calc_tools/common/: cloud_covariance_estimation.cpp  estimate_fov.cpp  frame.cpp  frame_cpu.cpp  ivox.cpp  time_keeper.cpp  visual_lidar_data.cpp
lidar_camera_calibration/src/calc_tools/preprocess/: generate_lidar_image.cpp  pcl_densifier.cpp  preprocess.cpp  static_point_cloud_integrator.cpp
lidar_camera_calibration/src/camera/: create_camera.cpp
lidar_camera_calibration/urdf/: robot.urdf.xacro
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: camera_info.yaml  rosbag_record.yaml  usb_cam_params.yaml
robot_bringup/launch/: robot.launch.py  rosbag_recorder.launch.py  velodyne_hw_if.launch.py
robot_bringup/rviz/: robot.rviz
robot_bringup/urdf/: robot.urdf.xacro
scripts/: c270.sh
sync_sensors/: CMakeLists.txt  package.xml
sync_sensors/src/: sync_sensors.cpp
